# line-lead-hub-AA

./: .env  .gitignore  capacitor.config.ts  index.html  latest.json  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: desktop-build.yml
docs/: CAPACITOR_SETUP.md  MOBILE_RELEASE.md  NATIVE_APPS.md
public/: manifest.json  sw.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ActiveLinesMeter.tsx  CuttingDetailModal.tsx  CuttingTargetDetailModal.tsx  DMGWarningModal.tsx  EditCuttingActualModal.tsx  EditSewingActualModal.tsx  EditSewingTargetModal.tsx  EditStorageTransactionModal.tsx  EditSubmissionModal.tsx  ErrorBoundary.tsx  ExportSubmissionsDialog.tsx  ExtrasLedgerModal.tsx  ExtrasOverviewModal.tsx  FinishingLogDetailModal.tsx  LoadingScreen.tsx  NetworkStatusIndicator.tsx  NotificationBell.tsx  NotificationPreferences.tsx  OutputExtrasCard.tsx  StorageBinCardDetailModal.tsx  SubmissionDetailModal.tsx  SubscriptionGate.tsx  TargetDetailModal.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useActiveLines.ts  useEditPermission.ts  useNetworkStatus.ts  useOfflineSubmission.ts  useOfflineSync.ts  usePagination.ts  useRecoveryGuard.ts  useSubscription.ts
src/i18n/: config.ts
src/lib/: capacitor.ts  constants.ts  dmg-detection.ts  offline-queue.ts  plan-tiers.ts  security.ts
src/pages/: AllSubmissions.tsx  Auth.tsx  Billing.tsx  BillingPlan.tsx  Blockers.tsx  CuttingAllSubmissions.tsx  CuttingEndOfDay.tsx  CuttingForm.tsx  CuttingMorningTargets.tsx  CuttingMySubmissions.tsx  CuttingSummary.tsx  Dashboard.tsx  DropdownSettings.tsx  EndOfDay.tsx  FactorySetup.tsx  FinishingDailyOutput.tsx  FinishingEndOfDay.tsx  (+29 more)
supabase/: config.toml
(+95 files in other folders)
